- Fixed:   - Error handling on booting now works fine.   - Replication is now started automatically in LiveSync mode.   - Batch database update is now disabled in LiveSync mode.   - No longer automatically reconnection while off-focused.   - Status saves are thinned out.   - Now Self-hosted LiveSync waits for all files between the local database and storage to be surely checked. - Improved:   - The job scheduler is now more robust and stable.   - The status indicator no longer flickers and keeps zero for a while.   - No longer meaningless frequent updates of status indicators.   - Now we can configure regular expression filters in handy UI. Thank you so much, @eth-p!   - `Fetch` or `Rebuild everything` is now more safely performed. - Minor things   - Some utility function has been added.   - Customisation sync now less wrong messages.   - Digging the weeds for eradication of type errors.

--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,9 @@
 .canvas-wrapper::before,
 .empty-state::before {
     content: var(--sls-log-text, "");
+    font-variant-numeric: tabular-nums;
+    font-variant-emoji: emoji;
+    tab-size: 4;
     text-align: right;
     white-space: pre-wrap;
     position: absolute;
